<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Cadastro">

    <TextView
        android:id="@+id/id_Cadastro"
        android:layout_width="367dp"
        android:layout_height="56dp"
        android:layout_marginTop="16dp"
        android:text="@string/Cadastro"
        android:textColor="#9C27B0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/id_DigiteEmail"
        android:layout_width="379dp"
        android:layout_height="71dp"
        android:layout_marginStart="81dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="121dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/DigiteEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.416"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/id_Cadastro" />

    <EditText
        android:id="@+id/id_DigiteSenha"
        android:layout_width="392dp"
        android:layout_height="76dp"
        android:layout_marginStart="81dp"
        android:layout_marginTop="212dp"
        android:layout_marginEnd="121dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/DigiteSenha"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.391"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/id_Cadastro" />

    <Button
        android:id="@+id/id_Registrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="84dp"
        android:layout_marginEnd="40dp"
        android:text="@string/Registrar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/id_DigiteSenha" />

    <Button
        android:id="@+id/id_Voltar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="160dp"
        android:layout_marginEnd="128dp"
        android:text="@string/Voltar"
        app:layout_constraintEnd_toStartOf="@+id/id_Registrar"
        app:layout_constraintTop_toTopOf="@+id/id_DigiteSenha" />
</androidx.constraintlayout.widget.ConstraintLayout>